--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@
     --primario: #9c27b0;
     --primarioOscuro: #891190;
     --secundario: #ffce00;
-    --secundarioOscuro: rgb(233, 287, 2);
+    --secundarioOscuro: #808080;
     --blanco: #fff;
     --negro: #000;
 
@@ -32,7 +32,7 @@ a{
     text-decoration: none;
 }
 img{
-    max-width: 100%;
+    width: 100%;
 }
 .contenedor{
     max-width: 120rem;
@@ -111,9 +111,6 @@ h3{
     background-color: var(--primarioOscuro);
     padding: 1rem;
 }
-.producto__imagen{
-    width: 100%;
-}
 .producto__informacion{
 
 }
@@ -167,7 +164,6 @@ h3{
 }
 .nosotros__imagen{
     grid-row: 1 / 2;
-    width: 100%;
 }
 @media (min-width: 768px) {
     .nosotros__imagen{
@@ -188,10 +184,47 @@ h3{
 .bloque{
     text-align: center;
 }
-.bloque__imagen{
-    width: 100%;
-}
 .bloque__titulo{
     margin: 0%;
 }
+/*SECCION PRODUCTO*/
+@media (min-width: 768px) {
+    .camisa{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 2rem;
+    }
+}
+.formulario{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+}
+.formulario__campo{
+    /*Se puede hacer en una sola linea*/
+    border-color: var(--primarioOscuro);
+    border-width: 1rem;
+    border-style: solid;
+    /*border:1rem solid var();*/
+    background-color: transparent;
+    color: var(--blanco);
+    font-size: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 1rem;
+    appearance: none;
+}
+.formulario__submit{
+    background-color: var(--secundario);
+    border: none;
+    font-size: 3rem;
+    font-family: var(--fuentePrincipal);
+    padding: 2rem;
+    transition: background-color .3s ease;
+    grid-column: 1 / 3;
+}
+.formulario__submit:hover{
+    cursor: pointer;
+    background-color: var(--secundarioOscuro);
+}
+
 
